--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-streamlit
-yt-dlp
-google-cloud-speech
+streamlit==1.26.0
+pytube==15.0.0
+openai-whisper==20230314
 googletrans==4.0.0-rc1
-TTS
-ffmpeg-python
-opencv-python
-numpy
-torch
-openai-whisper
-gdown
-audio2video
+gtts==2.3.2
+moviepy==1.0.3
+ffmpeg-python==0.2.0
